// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Remix Application Integrated Repo should create the application correctly 1`] = `
"/**
 * @type {import('@remix-run/dev').AppConfig}
 */
module.exports = {
  ignoredRouteFiles: ['**/.*'],
  // appDirectory: \\"app\\",
  // assetsBuildDirectory: \\"public/build\\",
  // serverBuildPath: \\"build/index.js\\",
  // publicPath: \\"/build/\\",
  watchPaths: ['../../libs'],
};
"
`;

exports[`Remix Application Integrated Repo should create the application correctly 2`] = `
"import type { MetaFunction } from '@remix-run/node';
import {
  Links,
  LiveReload,
  Meta,
  Outlet,
  Scripts,
  ScrollRestoration,
} from '@remix-run/react';

export const meta: MetaFunction = () => ({
  charset: 'utf-8',
  title: 'New Remix App',
  viewport: 'width=device-width,initial-scale=1',
});

export default function App() {
  return (
    <html lang=\\"en\\">
      <head>
        <Meta />
        <Links />
      </head>
      <body>
        <Outlet />
        <ScrollRestoration />
        <Scripts />
        <LiveReload />
      </body>
    </html>
  );
}
"
`;

exports[`Remix Application Integrated Repo should create the application correctly 3`] = `
"export default function Index() {
  return (
    <div style={{ fontFamily: 'system-ui, sans-serif', lineHeight: '1.4' }}>
      <h1>Welcome to Remix</h1>
      <ul>
        <li>
          <a
            target=\\"_blank\\"
            href=\\"https://remix.run/tutorials/blog\\"
            rel=\\"noreferrer\\"
          >
            15m Quickstart Blog Tutorial
          </a>
        </li>
        <li>
          <a
            target=\\"_blank\\"
            href=\\"https://remix.run/tutorials/jokes\\"
            rel=\\"noreferrer\\"
          >
            Deep Dive Jokes App Tutorial
          </a>
        </li>
        <li>
          <a target=\\"_blank\\" href=\\"https://remix.run/docs\\" rel=\\"noreferrer\\">
            Remix Docs
          </a>
        </li>
      </ul>
    </div>
  );
}
"
`;

exports[`Remix Application Standalone Project Repo should create the application correctly 1`] = `
"/**
 * @type {import('@remix-run/dev').AppConfig}
 */
module.exports = {
  ignoredRouteFiles: ['**/.*'],
  // appDirectory: \\"app\\",
  // assetsBuildDirectory: \\"public/build\\",
  // serverBuildPath: \\"build/index.js\\",
  // publicPath: \\"/build/\\",
  watchPaths: ['./libs'],
};
"
`;

exports[`Remix Application Standalone Project Repo should create the application correctly 2`] = `
"import type { MetaFunction } from '@remix-run/node';
import {
  Links,
  LiveReload,
  Meta,
  Outlet,
  Scripts,
  ScrollRestoration,
} from '@remix-run/react';

export const meta: MetaFunction = () => ({
  charset: 'utf-8',
  title: 'New Remix App',
  viewport: 'width=device-width,initial-scale=1',
});

export default function App() {
  return (
    <html lang=\\"en\\">
      <head>
        <Meta />
        <Links />
      </head>
      <body>
        <Outlet />
        <ScrollRestoration />
        <Scripts />
        <LiveReload />
      </body>
    </html>
  );
}
"
`;

exports[`Remix Application Standalone Project Repo should create the application correctly 3`] = `
"export default function Index() {
  return (
    <div style={{ fontFamily: 'system-ui, sans-serif', lineHeight: '1.4' }}>
      <h1>Welcome to Remix</h1>
      <ul>
        <li>
          <a
            target=\\"_blank\\"
            href=\\"https://remix.run/tutorials/blog\\"
            rel=\\"noreferrer\\"
          >
            15m Quickstart Blog Tutorial
          </a>
        </li>
        <li>
          <a
            target=\\"_blank\\"
            href=\\"https://remix.run/tutorials/jokes\\"
            rel=\\"noreferrer\\"
          >
            Deep Dive Jokes App Tutorial
          </a>
        </li>
        <li>
          <a target=\\"_blank\\" href=\\"https://remix.run/docs\\" rel=\\"noreferrer\\">
            Remix Docs
          </a>
        </li>
      </ul>
    </div>
  );
}
"
`;
